// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders block button type correctly 1`] = `
<button
  className="css-1pjuk3c"
>
  A block button!
</button>
`;

exports[`Button renders default button type correctly 1`] = `
<button
  className="css-xxwvww"
>
  A button!
</button>
`;

exports[`Button renders default button type correctly 2`] = `
<button
  className="css-548gsz"
>
  A button!
</button>
`;

exports[`Button renders default button type correctly 3`] = `
<button
  className="css-18gpm1f"
>
  A button!
</button>
`;

exports[`Button renders huge button type correctly 1`] = `
<button
  className="css-9jomw4"
>
  A huge button!
</button>
`;

exports[`Button renders native button correctly 1`] = `
<button
  className="css-xxwvww"
>
  A button!
</button>
`;

exports[`ButtonLink renders link button correctly 1`] = `
<a
  className="css-xxwvww"
  href="/home"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  A link button!
</a>
`;
